clusters/talos-cluster/artist-webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artist-webapp
  labels:
    name: artist-webapp
