clusters/talos-cluster/artist-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artist-webapp-service
  namespace: artist-webapp
  labels:
    app: artist-webapp
spec:
  selector:
    app: artist-webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
